<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Player</string>
    <string name="button_play">PLAY</string>
    <string name="button_pause">PAUSE</string>
	<string name="next_str">&gt;</string>
	<string name="prev_str">&lt;</string> 
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="time_str">--:--</string>
    <string name="menu_file_props">File properties</string>
    <string name="menu_donate">Donate</string>
    <string name="preferences_activity_name">Settings</string>
    <string name="donation_activity_name">Donation</string>
    <string name="no_data">No data. Please check memory card or restart application</string>
    <string name="track_name">TrackName</string>
    <string name="artist">Artist</string>
    <string name="button_and_toast_repeat_first_part">Repeat:</string>
    <string name="button_and_toast_shuffle_first_part">Shuffle:</string>
    <string name="button_repeat_R">Repeat: OFF</string>
    <string name="button_repeat_Rplus">Repeat: ON</string>
    <string name="button_repeat_Rone">Repeat: Current</string>
    <string name="button_shuffle_S">Shuffle: OFF</string>
    <string name="button_shuffle_Splus">Shuffle: ON</string>
    <string name="location">Location: </string>
    <string name="trackinfo_artist">Artist: </string>
    <string name="trackinfo_title">Title: </string>
    <string name="trackinfo_duration">Duration: </string>
    <string name="trackinfo_year">Year: </string>
    <string name="trackinfo_album">Album: </string>
    <string name="trackinfo_header">Properties of the current file</string>
    <string name="ok">OK</string>
    <string name="filepath">Filepath:</string>
    <string name="properties">Properties</string>
    <string name="media_wasnt_sel">"Mediafile wasn't selected"</string>
    <string name="unable_start_playing">Unable to start playing</string>
    <string name="play_first_file_in_list">Playing the first file in the list</string>
    <string name="unable_move_prev">Unable to move to the previous file"</string>
    <string name="playing_lastfile_inlist">Playing the last file in the list</string>
    <string name="unable_mv_next">Unable to move next</string>
    <string name="repeatmode_current_filelist">Repeat mode: current filelist</string>
    <string name="repeatmode_current_track">Repeat mode: current track</string>
    <string name="repeatmode_off">Repeat mode is OFF</string>
    <string name="shuffle_off">Shuffle mode is OFF</string>
    <string name="shuffle_on">Shuffle mode is ON</string>
    <string name="file_cant_be_played_refresh">"File can't be played. \nProbably it was deleted. \nGo to \"Menu>Settings>Refresh media files\""</string>
    <string name="file_cant_be_played_refresh_part1">File [</string>
    <string name="file_cant_be_played_refresh_part2">"] can't be played. \nProbably it was deleted. \nGo to \"Menu>Settings>Refresh media files\""</string>
    <string name="folder_cant_read_part1">Folder [</string>
	<string name="folder_cant_read_part2">"]  can't be read!"</string>
	<string name="version">Version: </string>
	<string name="author">"\u00a9 2012 - 2015 Sergii Zhuk, \nKyiv, Ukraine\n\nContact me: sergii.dev@gmail.com"</string>
	<string name="about_title">About</string>
	<string name="media_cant_be_refreshed">"Media files can't be refreshed.\nProbably external storage is unmounted"</string>
	<string name="refreshing_media">Refreshing media</string>
	<string name="please_wait">Please wait &#8230;</string>
	<string name="cant_get_info_for_file_medialib">"Can't get information about file from MediaLibrary"</string>
	<string name="cant_get_info_for_file_or_service_err">"Can't get information about file or service error"</string>
	<string name="end_of_the_playlist_reached">The end of the playlist has been reached</string>
    <string name="do_you_like_app_donate">Do you find this application useful? Support it\'s development by sending a donation</string>
</resources>