<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main_root"
    android:background="@color/black"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:animateLayoutChanges="true"
        android:layout_above="@+id/layout_trackinfo"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/text_path"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_deep" />
         <ListView
	        android:id="@+id/list_main"
    	    android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:divider="@color/list_divider"
        	android:dividerHeight="1dp"
        	android:fastScrollEnabled="true"/>
        <TextView
            android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/near_white"
            android:text="@string/no_data"/>
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/layout_trackinfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"   
        android:layout_above="@+id/layout_time"
        android:gravity="center"
        android:orientation="vertical" 
        android:layout_marginBottom="2dp">
	   <org.sergez.splayer.view.ScrollingTextView
	        android:id="@+id/text_tracktime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="1dp"      
	        android:text="@string/track_name"
	        android:textColor="@color/near_white"        
	        android:textSize="19sp"    
            android:lines="1"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            />
	   <org.sergez.splayer.view.ScrollingTextView
	        android:id="@+id/text_trackartist"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="15sp"
	        android:textColor="@color/near_white"
	        android:text="@string/artist" 
            android:lines="1"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
	         />   
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"   
        android:layout_above="@+id/linearLayout1"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/text_current_tracktime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/time_str"        
	        android:textSize="20dp"
			android:layout_gravity="center_vertical|left"
			android:layout_marginLeft="6dp" 
			android:layout_marginRight="10dp"
			android:layout_weight="0"
			android:textColor="@color/elapsed_time_normal"
            android:textStyle="bold"
	    />
	    <SeekBar
             android:id="@+id/seekbar_main"
             android:gravity="center"
             android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
	         android:layout_weight="10"
	         android:progress="0"
	         android:secondaryProgress="0"	                     
             android:thumb="@drawable/seekbar_thumb_selector"
             android:progressDrawable="@drawable/seekbar_progress"
             android:maxHeight="5dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
 			/> <!--android:thumb="@drawable/seek_handler"-->
	    <TextView
	        android:id="@+id/text_left_tracktime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/time_str"
	        android:textSize="20dp"
	        android:layout_gravity="center_vertical|left"
	        android:layout_marginRight="6dp"
	        android:layout_marginLeft="10dp"
	        android:layout_weight="0"
            android:textColor="@color/near_white"
            android:textStyle="bold"
                />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/control_buttons_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_prev"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.8"
            android:text="@string/prev_str"
            android:textSize="16pt"
            android:background="@drawable/custom_button"
            android:textColor="@color/black"
           />
        <Button
	        android:id="@+id/button_playstop"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="0.6"   
	        android:text="@string/button_play"
	        android:textSize="14pt"
	        android:textStyle="bold" 
	        android:background="@drawable/custom_button"
            android:textColor="@color/black"
                />
        <Button
            android:id="@+id/button_next"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.8"
            android:text="@string/next_str"
            android:textSize="16pt"
            android:background="@drawable/custom_button"
            android:textColor="@color/black"
                />
        </LinearLayout>

</RelativeLayout>
